[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Scripts/SimpleEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Scripts/EnemyArea2D.gd" type="Script" id=2]
[ext_resource path="res://assets/EnemySpeedy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.6387, 14.5108 )

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.415673 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -57.2636, 2.09502 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.421785 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -170.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.519591, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.151203, 0.299536 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.149978, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.956863, 0.431373, 0.431373, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemySpeedy" type="Node2D" groups=[
"claw_attackable",
"enemy",
]]
modulate = Color( 1, 1, 1, 0.970549 )
script = ExtResource( 1 )
health = 3
min_wave = 3
difficulty_point = 2
base_movement_speed = 250
activation_x = 500.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.00993, 0.466007 )
scale = Vector2( 0.214059, 0.214059 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 13.5053, 4.76657 )
collision_layer = 12
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -13.264, -1.79242 )
shape = SubResource( 1 )

[node name="PearlContainer" type="Node2D" parent="."]
position = Vector2( -32.899, -0.418121 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/receive_attack = SubResource( 3 )

[node name="ReceiveAttackFleeTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SearchTargetTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ReceiveAttackFleeTimer" to="." method="_on_ReceiveAttackFleeTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
